    build-deps
  * [i386] debian/control: Fix cross-compiler build-dependency
  * debian/README.source: Document how to run kconfigeditor2
  * [armhf,arm64] serial: 8250: Disable SERIAL_8250_DEPRECATED_OPTIONS
  * percpu: convert spin_lock_irq to spin_lock_irqsave (fixes boot failure with
    alpha-generic flavour)
  * debian/tests/python: Fix spurious failure due to misuse of stderr

  [ Marcin Juszkiewicz ]
  * [arm64] enable ARM_CCI_PMU so ARM_CCI400_PMU and ARM_CCI5xx_PMU options
    get really enabled.
  * [arm64] enable PCI_PRI, PCI_PASID as PCI can be behind IOMMU in servers.
  * udeb: Add virtio-gpu into d-i to get graphical output in VM instances.

  [ Salvatore Bonaccorso ]
  * [x86] kvmclock: set offset for kvm unstable clock (Closes: #918036)

  [ Hideki Yamane ]
  * [x86] Enable Touchpad support on Gemini Lake via CONFIG_PINCTRL_GEMINILAKE
    (Closes: #917388)
  * [x86] Enable SND_SOC_ES8316 and Baytrail & Cherrytrail with ES8316 codec,
    too (Closes: #918589)
  * hwmon: Enable CONFIG_SENSORS_NCT7802,NCT7904,NPCM7XX,ASPEED and W83773G
    to use HWMON hardware (Closes: #912597)
  * net: can: Enable CONFIG_CAN_PEAK_PCIEFD for a PCI express CAN Bus adapter
    (Closes: #920809)
  * [armhf] Enable CONFIG_SENSORS_LM75 for armhf (Closes: #918114)

  [ Vagrant Cascadian ]
  * [armhf] Enable CONFIG_MMC_SDHCI_OMAP=m, used on DRA7 and related SoCs.

  [ Uwe Kleine-König ]
  * [armel] add spi-orion to mtd.udeb to be able to access spi flash on e.g.
    qnap ts-21x. (Closes: #920607)

 -- Luca Boccassi <bluca@debian.org>  Fri, 18 Jan 2019 19:09:06 +0000

linux (4.19.16-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.19.14
    - ax25: fix a use-after-free in ax25_fillin_cb()
    - gro_cell: add napi_disable in gro_cells_destroy
    - ip6mr: Fix potential Spectre v1 vulnerability
    - ipv4: Fix potential Spectre v1 vulnerability