@@ -381,6 +381,8 @@ linux (4.19.20-1) UNRELEASED; urgency=medium
   * percpu: convert spin_lock_irq to spin_lock_irqsave (fixes boot failure with
     alpha-generic flavour)
   * debian/tests/python: Fix spurious failure due to misuse of stderr
+  * Update "Revert "objtool: Fix CONFIG_STACK_VALIDATION=y warning for ..."
+    to not duplicate the conditional warning/error
 
   [ Marcin Juszkiewicz ]
   * [arm64] enable ARM_CCI_PMU so ARM_CCI400_PMU and ARM_CCI5xx_PMU options
